# sixlift

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cmake/: mingw-w64-x86_64.cmake
include/sixlift/: config.h  log.h  platform.h  probe.h  proc.h  route.h  service.h
src/: config.c  log.c  main.c  platform_linux.c  platform_windows.c  probe.c  proc.c  route.c  service.c
